--- a/style.css
+++ b/style.css
@@ -53,7 +53,15 @@
   
   .result {
     margin-top: 20px;
-    font-size: 1.2rem;
+    font-size: 1.3rem;
+    font-weight: 600;
+  }
+  .rank{
+    font-size: 1.3rem;
+    font-weight: 600;
+  }
+  .grade{
+    font-size: 1.3rem;
     font-weight: 600;
   }
   
